# simulator

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: main.rs
src/domain/: connection.rs  coordinates.rs  drone.rs  mission.rs  mod.rs
src/io/: mod.rs
src/misc/: heartbeat.rs  id_tracker.rs  mod.rs  selected_drone.rs
src/ui/: left_panel.rs  mod.rs  render_drones.rs  right_panel.rs
