[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

build = "build/build.rs"

[dependencies]
bevy = "0.14.1"
bevy_egui = "0.29.0"

tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-util = "0.7.10"

serde = "1.0.190"

mavspec = { version = "0.3.3", features = ["specs", "rust"] }
mavio = { version = "0.2.6", features = ["async"]}
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
mavspec = { version = "0.3.4", features = ["generators", "rust_gen"] }
